[project]
name = "pyanist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab>=4.4.7",
    "music21>=9.7.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "tensorflow>=2.20.0",
]
